# euchar

./: LICENSE  MANIFEST.in  README.md  setup.py
docs/: .buildinfo  cppbinding.html  curve.html  display.html  example_euler_char_surface.html  filtrations.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  surface.html  utils.html
docs/.doctrees/: cppbinding.doctree  curve.doctree  display.doctree  environment.pickle  example_euler_char_surface.doctree  filtrations.doctree  index.doctree  surface.doctree  utils.doctree
docs/.doctrees/usage_curve/: example_euler_char_curve.doctree
docs/.doctrees/usage_surface/: example_euler_char_surface.doctree
docs/_sources/: cppbinding.rst.txt  curve.rst.txt  display.rst.txt  example_euler_char_surface.rst.txt  filtrations.rst.txt  index.rst.txt  surface.rst.txt  utils.rst.txt
docs/_sources/usage_curve/: example_euler_char_curve.rst.txt
docs/source/: conf.py  conf.py~  cppbinding.rst~
docs/usage_curve/: example_euler_char_curve.html
docs/usage_surface/: example_euler_char_surface.html
euchar/: curve.py  display.py  filtrations.py  surface.py  utils.py
euchar/cppbinding/: CMakeLists.txt  curve.cpp  surface.cpp  utils.cpp
euchar/cppbinding/include/: libcurve.hpp  libsurface.hpp  libutils.hpp
euchar/cppbinding/src/: libcurve.cpp  libsurface.cpp  libutils.cpp
euchar/tests/: test_radiuses.py
notebooks/: 001-utils.ipynb  002-curve.ipynb  003-surface.ipynb  004-filtrations.ipynb  example_euler_char_curve.ipynb  example_euler_char_surface.ipynb  test_curve_image_2d.ipynb  test_curve_image_3d.ipynb  test_surface_image_2d.ipynb  test_surface_images_3d.ipynb  test_utils_image_2d.ipynb  test_utils_image_3d.ipynb
notebooks/.ipynb_checkpoints/: example_euler_char_curve-checkpoint.ipynb
(+3 files in other folders)
